<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_Buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/buscar_por"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/spinner_BuscarDonativo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/borde_cajas_donativo"
            android:contentDescription="@string/spinner_busqueda_donativo"
            android:entries="@array/spiner_buscar_donativo"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:popupBackground="@drawable/fondo_donativo2"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/caja_busqueda_donativo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:autofillHints="Nombre de usuario"
                android:background="@drawable/borde_cajas_donativo"
                android:ems="10"
                android:hint="@string/nombre_usuario"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/btn_buscar_donativo"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/borde_boton_login"
                android:backgroundTint="@color/morado_launch"
                android:contentDescription="@string/boton_de_busqueda"
                android:minHeight="48dp"
                android:src="@drawable/ic_search"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_donativos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>